# forecasting

./: README.md  ReadMe.md  pyproject.toml
model_binaries/: model_load_2024-08-18.keras  model_load_2024-08-19_2.keras  model_pv_2024-08-18.keras  model_pv_2024-08-19_2.keras  train_models.ipynb
src/forecaster/: __init__.py  predictor_simple.py
src/forecaster/models/: __init__.py  simple_model.py  tcn_2.py  tcn_3.py  temporal_convolutional_network.py
src/forecaster/utils/: __init__.py  dataset_simple.py
